<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PhotoApp</string>
    <string name="facebook_app_id">1599780603601030</string>
    <string name="facebook_app_url">https://fb.me/1608534259392331</string>
    <string name="facebook_app_image_preview_url">http://hd.wallpaperswide.com/thumbs/dried_flowers_3-t2.jpg</string>

    <string name="gcm_sender_id">1018583476585</string>
    <string name="gcm_api_key">AIzaSyCmpHVp0aFSZ0nyxakBk3-gr39y7UBmh7o</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_fb_login">Login with Facebook</string>
    <string name="imageView_avatar_description">Avatar</string>
    <string name="txt_firstname">Team</string>
    <string name="txt_lastname">Goat</string>
    <string name="txt_photo_total"># Photos</string>
    <string name="txt_album_total"># Albums</string>
    <string name="txt_connection_total"># Connections</string>
    <string name="btn_profile_edit">Edit your profile</string>
    <string name="txt_album_title">Album Title</string>
    <string name="txt_album_description">Album Description</string>
    <string name="txt_create_album">Create Album</string>
    <string name="api_host">http://localhost:80/</string>
    <string name="btn_add_photo">Add A Photo</string>

    <string-array name="menu_item">
        <item>Profile</item>
        <item>Album</item>
        <item>Friend</item>
        <item>Network</item>
    </string-array>
    <string-array name="albums_test">
        <item>Pew Pew</item>
        <item>Paw Paw</item>
        <item>Hue Hue Hue</item>
        <item>Bla Bla Bla</item>
    </string-array>
    <string-array name="friend_test">
        <item>Chris</item>
        <item>Carita</item>
        <item>Sai</item>
        <item>Thong</item>
    </string-array>

    <string name="login_facebook_successful">Facebook login successful.</string>
    <string name="login_facebook_cancelled">Facebook login cancelled.</string>
    <string name="login_facebook_failed">Facebook login failed, please try again later.</string>
    <string name="login_facebook_launch_app_button_text">My Albums</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_view_album">ViewAlbum</string>
    <string name="title_activity_photo_albums">PhotoAlbums</string>
    <string name="title_activity_single_image_view">SingleImageViewActivity</string>

    <string name="album_action_bar_create_album">Create Album</string>
    <string name="album_action_bar_facebook_invite">Invite Friends</string>
    <string name="album_action_bar_login_screen">Logout</string>

    <string name="album_view_action_bar_upload_photo">Upload Image</string>

    <string name="image_tab_view_title">Uploaded Image</string>
    <string name="image_tab_view_image_description">Uploaded Image</string>
    <string name="image_tab_add_comment_btn_text">Comment</string>
    <string name="search_hint">Enter image name/description</string>
    <string name="title_activity_search">SearchActivity</string>
    <string name="latitude_hint">latitude</string>
    <string name="longtitude_hint">longtitude</string>
    <string name="distance_from_location">distance</string>
    <string name="title_activity_image_search">ImageSearchActivity</string>
</resources>
