<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="edu.cmpe277.teamgoat.photoapp.PhotoAlbums">
    <item
        android:id="@+id/album_action_create_album"
        android:orderInCategory="100"
        android:icon="@android:drawable/ic_menu_add"
        android:title="@string/album_action_bar_create_album"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/album_action_invite_friends"
        android:orderInCategory="200"
        android:icon="@android:drawable/ic_menu_myplaces"
        android:title="@string/album_action_bar_facebook_invite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/album_action_login_screen"
        android:title="@string/album_action_bar_login_screen"
        android:orderInCategory="300"
        app:showAsAction="never" />

</menu>
